Archive2/68/1c5b61d95f0923/output
main.cpp:1:1: error: unknown type name 'test'
test.cpp|14 col 39| warning: the address of 'int elapsedtime(int, int)' will always evaluate as 'true' [-Waddress]
^
main.cpp:1:5: error: cannot use dot operator on a type
test.cpp|14 col 39| warning: the address of 'int elapsedtime(int, int)' will always evaluate as 'true' [-Waddress]
    ^
2 errors generated.
